Bug 175490 - new messages in ignored threads aren't marked as ignored
Summary: new messages in ignored threads aren't marked as ignored
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new message list (other bugs)
Version First Reported In: 1.10.90
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Szymon Stefanek
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-11-18 14:25 UTC by Stefano Crocco
Modified: 2009-02-06 22:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefano Crocco 2008-11-18 14:25:50 UTC
Version:           1.10.90 (using 4.1.73 (KDE 4.1.73 (KDE 4.2 >= 20081112)), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.25-gentoo-r5

With the new message list view, ignored threads started working incorrectly. Before that, new messages in a thread which had been marked as ignored were in turn marked as ignored. Now, this doesn't happen anymore. When I mark a thread as ignored, all messages already in it are marked as ignored, but messages belonging to that thread which arrive later are left as unread. 

As it works now, the "ignore thread" menu entry works almost exactly as the "mark thread as read" entry.

It may be that there's an option in the new interface to restore the old behaviour, but I couldn't find it.
Comment 1 Jaime Torres 2008-11-18 16:40:11 UTC
Confirmed, new messages in the thread ar not marked automatically as ignored.
Comment 2 Thomas McGuire 2008-12-09 22:15:45 UTC
Watched threads also don't work.
Comment 3 Szymon Stefanek 2008-12-10 03:37:09 UTC
SVN commit 895147 by stefanek:

Propagate the Watched and Ignored status from parent to children messages.

BUG: 175490



 M  +25 -9     core/model.cpp  
 M  +164 -17   core/model.h  
 M  +12 -0     core/storagemodelbase.h  
 M  +2 -2      core/view.cpp  
 M  +2 -2      core/view.h  
 M  +10 -0     storagemodel.cpp  
 M  +13 -1     storagemodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=895147
Comment 4 S. Burmeister 2009-01-02 12:38:09 UTC
If I enable the watch status icon of an existing thread, i.e. its start email, should the watch status only be applied to new emails in that thread or all?

If the latter is the case, this is still broken for my kmail.
Comment 5 S. Burmeister 2009-02-06 22:52:08 UTC
This is still buggy. If the watch/ignore is activated for the first message of an existing thread, it is not applied to the whole thread. If one changes folders a few times or some new mail arrives, the status is changed for some part of the thread, but not all subthreads.

It seems that it needs more than one trigger to mark the whole thread with the status.