Propagate the Watched and Ignored status from parent to children messages.

BUG: 175490


svn path=/trunk/KDE/kdepim/; revision=895147